// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FetchProvider> Unprovided 1`] = `
<DocumentFragment>
  <div>
    Error
  </div>
</DocumentFragment>
`;

exports[`<FetchProvider> error 1`] = `
<DocumentFragment>
  <div>
    Error
  </div>
</DocumentFragment>
`;

exports[`<FetchProvider> fetch 1`] = `
<DocumentFragment>
  <div>
    Loading
  </div>
</DocumentFragment>
`;

exports[`<FetchProvider> fetch 2`] = `
<DocumentFragment>
  <div>
    Fetched
  </div>
</DocumentFragment>
`;

exports[`<FetchProvider> preview 1`] = `
<DocumentFragment>
  <div>
    Preloaded
  </div>
</DocumentFragment>
`;
